--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
     "prettier": "^1.16.4"
+  },
+  "overrides": {
+    "webpack-dev-middleware": "5.0.0"
   }
 }
